# Depositoryeffect

./: .gitignore  Pipfile  README.md  export.txt  nvda.ipynb  plan.txt  requirements.txt  settings.json  setup.cfg  setup.py  test.ipynb  todo
cost/: ibkr.txt
main/: Logger.py  main.py
main/config/: Parameter.py  config.py  depositoryeffect.py
main/frontend/: Datepicker.py  main.py
main/metrics/: main.py
main/player/: player.py
main/portfolio/: PorrtfolioUngewichtet.py  Porrtfoliodispo copy.py  Porrtfoliodispo.py  Portfolio.py  Simulator.py  SimulatorDispo.py  SimulatorRandom.py
main/results/: 1752622087  1752622184  1752622352  1752622440  1752622613  1752622948  2025-07-16-NASDAQ-AA-20-DG-0-1752667607.json  2025-07-16-NASDAQ-AA-3-DG-0-1752667102.json  2025-07-16-NASDAQ-AA-3-DG-0-1752667362.json  2025-07-16-NASDAQ-AA-3-DG-0-1752670103.json  2025-07-16-NASDAQ-AA-3-DG-0-1752670235.json  2025-07-16-NASDAQ-AA-3-DG-0-1752670325.json  2025-07-16-NASDAQ-AA-3-DG-0-1752680160.json  2025-07-16-NASDAQ-AA-3-DG-0-1752684379.json  2025-07-16-NASDAQ-AA-3-DG-0-1752685975.json  (+75 more)
results/: config.py
test/: pdf_to_img.py  samesymbol.py  test_tickers.ipynb
tradx/: README.md  __init__.py  backend.txt  base.txt  columns.json  config.py  data.ipynb  data.py  data_yf.ipynb  embed.py  file.html  js.json  key.py  links.txt  main.txt  news.ipynb  news.py  rss.py  s2.ipynb  select.json  sources.txt  stockers.ipynb  symbols.ipynb  symbols.py  test.ipynb  theory.txt  theory2.txt  tradable.txt  yf_exchanges.txt
tradx.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+303 files in other folders)
