[metadata]
name = tradx
version = 0.2
author = Alexandros Apostolidis
description = Ein Finanzanalyse-Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.5.0
    yfinance>=0.2.18
    

[options.packages.find]
where = .

[flake8]
ignore = E501
ignore = E203